--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
  <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1> Contact Us</h1>
 
 <p> Contact Us
  ICI has an extensive administrative structure to oversee the large network of branches in India and abroad. The Corporate Centre is in Mumbai and 17 Local Head Offices and 101 Zonal Offices are located at important cities spread throughout the country. The Corporate Centre has several other establishments in and outside Mumbai, designated to cater to various functions. Our Colleges/Institutes/Training Centres are the seats of learning and research and development to spread the wings of knowledge not only to our employees but also other banks/establishments in India and abroad.
