--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <span class="psw">Sign <a href="Registration.html">Up?</a></span>
   </div>
 </form>
   <html>
