--- a/Registration.html
+++ b/Registration.html
@@ -3,7 +3,7 @@
 
  
 <div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">times;</span>
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>
   <form class="modal-content" action="/ login.php">
     <div class="container">
       <h1>Sign Up</h1>
@@ -22,7 +22,7 @@
         <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
       </label>
 
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+     
 
       <div class="clearfix">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
