--- a/Accounts.html
+++ b/Accounts.html
@@ -1,1 +1,18 @@
-
+<html>
+  <title>Open Your Account</title>
+  <body>
+First 50 cheque leaves will be free.
+Mobile banking
+Inter Net banking.
+Free ATM card during first year.
+Free cash deposit upto Rs. 25000/ -per day.
+Free Transfer of account from one branch to another.
+Statement of account is issued as per requirement at monthly/quarterly/half yearly/annual intervals.
+Facility of getting statement by e mail.
+Personal accident insurance available (Optional)
+Rate of Interest :  NIL
+Nomination facility Available
+Maximum Balance : No Limit
+Average monthly balance (AMB) requirement  from Feb 2021 : Rs.5000/-
+  </body>
+</html>
