--- a/MutualFunds.html
+++ b/MutualFunds.html
@@ -1,1 +1,16 @@
+<html>
+  <title>Mutual Funds</title>
+  <body>
+ ICI Mutual Funds offers three broad categories of mutual funds:
+Money Market investments are made in short term government debt papers and are good for parking money for short tenors, as the principal is safe, while the returns and liquidity remain high.
+Debt Funds are investments made on debt instruments like government securities, corporate and institutional debt papers.
+Equity Fund are investments in the stock market and are suitable for long term investors who want capital appreciation.
+ For more information , click here
+Its almost like hiring your own personal investment professiona paying him!
+  
+  
+  </body>
+  
+  
+</html>
 
