--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+  <p> HOME <a href="Home.html "> Home Page</a></p>
+  <p> AboutUs <a href=" AboutUs.html "> AboutUs Page</a></p>
+  <p> ContactUs <a href=" ContactUs.html "> ContactUs Page</a></p>
+  <p>  Services <a href="Loan.html "> Loan Page</a></p>
+  
   <form action="login.php" method="post">
    
    
