--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <button type="Home"   onclick= <a href="Home.html "> Home Page</a>>   
   <p> HOME <a href="Home.html "> Home Page</a></p>
   <p> AboutUs <a href=" AboutUs.html "> AboutUs Page</a></p>
   <p> ContactUs <a href=" ContactUs.html "> ContactUs Page</a></p>
