--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <button type="Home"   onclick= <a href="Home.html "> Home Page</a>>   
-  <p> HOME <a href="Home.html "> Home Page</a></p>
-  <p> AboutUs <a href=" AboutUs.html "> AboutUs Page</a></p>
-  <p> ContactUs <a href=" ContactUs.html "> ContactUs Page</a></p>
-  <p>  Services <a href="Loan.html "> Loan Page</a></p>
+   <button type=" AboutUs"   onclick= <a href="AboutUs.html "> AboutUs Page</a>> 
+<button type="ContactUs"   onclick= <a href="ContactUs.html "> ContactUs Page</a>> 
+<button type="Services"   onclick= <a href="Services.html "> Services Page</a>> 
+   
   
   <form action="login.php" method="post">
    
