--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-  <button type="Home"   onclick= <a href="Home.html "> Home Page</a>>   
-   <button type=" AboutUs"   onclick= <a href="AboutUs.html "> AboutUs Page</a>> 
-<button type="ContactUs"   onclick= <a href="ContactUs.html "> ContactUs Page</a>> 
-<button type="Services"   onclick= <a href="Services.html "> Services Page</a>> 
+ <a href=Home.html><button> Home</button></a>
+ 
+   <a href= AboutUs.html'><button>AboutUs</button></a> 
+<a href= ContactUs.html'><button>ContactUs</button></a>
+  <a href= Loans.html'><button>Services</button></a> 
    
   
   <form action="login.php" method="post">
