--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <a href=Home.html><button> Home</button></a>
  
    <a href= AboutUs.html'><button>AboutUs</button></a> 
-<a href= ContactUs.html'><button>ContactUs</button></a>
+<a href= contact.html'><button>ContactUs</button></a>
   <a href= Loans.html'><button>Services</button></a> 
    
   
