--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
    
    
 
+    
+ <a href=Home.html><button> Home</button></a>
+ 
+   <a href= AboutUs.html'><button>AboutUs</button></a> 
+<a href= contact.html'><button>ContactUs</button></a>
+  <a href= Loans.html'><button>Services</button></a> 
+   
+  
+  <form action="login.php" method="post">
+   
+   
+
   <div class="container">
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
